# mother

./: .gitignore  Cargo.toml  README.md  install.sh
src/: cli.rs  drawer.rs  main.rs  text_box.rs
