[package]
name = "mother"
version = "0.1.0"
edition = "2021"
authors = ["tomoikey"]
description = "A tool for generating Mother2 textboxes"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
imageproc = "0.25.0"
open = "5.3.3"